# ouidxpy

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
ouidxpy/: __init__.py  cpt.csv  definitions.csv  icd10cm.csv  icd10pcs.csv  idx_logics.py  ouidx.py
tests/: test_ouidx.py
